# EvoEngine-Archived

./: .clang-format  .codedocs  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh
EvoEngine_App/Demo/: CMakeLists.txt
EvoEngine_App/Demo/src/: Demo.cpp
EvoEngine_App/EcoSysLab/: CMakeLists.txt  imgui.ini
EvoEngine_App/EcoSysLab/src/: DatasetGeneration.cpp  EcoSysLabApp.cpp  LogGraderApp.cpp  SorghumFactoryApplication.cpp
EvoEngine_Plugins/: CMakeLists.txt
EvoEngine_Plugins/EcoSysLab/: CMakeLists.txt  capture_scene.py  generate_tree_pointcloud.py  space_colonization_tree.py  tree_structor.py
EvoEngine_Plugins/EcoSysLab/include/: Climate.hpp  EcoSysLab_PCH.hpp  ForestDescriptor.hpp  Json.hpp  LogGrader.hpp  SimulationSettings.hpp  Soil.hpp  Sorghum.hpp  SpatialPlantDistributionSimulator.hpp  Tree.hpp
EvoEngine_Plugins/EcoSysLab/include/ClimateModel/: ClimateModel.hpp
EvoEngine_Plugins/EcoSysLab/include/DataPipeline/: DatasetGenerator.hpp  PointCloudScannerUtils.hpp  SorghumPointCloudScanner.hpp  TreePointCloudScanner.hpp
EvoEngine_Plugins/EcoSysLab/include/JoeScan/: JoeScanScanner.hpp  jsSetupConfigParser.hpp
EvoEngine_Plugins/EcoSysLab/include/Layers/: EcoSysLabLayer.hpp  SorghumLayer.hpp
EvoEngine_Plugins/EcoSysLab/include/LogGrading/: LogWood.hpp
EvoEngine_Plugins/EcoSysLab/include/MeshFormation/: BillboardCloud.hpp  BillboardCloudsConverter.hpp  MeshGenUtils.hpp  StrandModelMeshGenerator.hpp  TreeMeshGenerator.hpp  TreeSkinnedMeshGenerator.hpp
EvoEngine_Plugins/EcoSysLab/include/Reconstruction/: TreeStructor.hpp
EvoEngine_Plugins/EcoSysLab/include/SoilModel/: HeightField.hpp  VoxelSoilModel.hpp
EvoEngine_Plugins/EcoSysLab/include/SorghumModel/: CBTFGroup.hpp  CBTFImporter.hpp  DoubleCBTF.hpp  PARSensorGroup.hpp  SkyIlluminance.hpp  SorghumDescriptor.hpp  SorghumField.hpp  SorghumGrowthStage.hpp  SorghumGrowthStages.hpp  SorghumSpline.hpp  SorghumState.hpp  SorghumStateGenerator.hpp  rapidcsv.h
EvoEngine_Plugins/EcoSysLab/include/SpatialCompetition/: SpatialPlantDistribution.hpp
EvoEngine_Plugins/EcoSysLab/include/StrandModel/: Particle2D.hpp  ParticleGrid2D.hpp  Physics2D.hpp  ProfileConstraints.hpp  RigidBody2D.hpp  StrandModel.hpp  StrandModelData.hpp  StrandModelParameters.hpp  StrandModelProfile.hpp
EvoEngine_Plugins/EcoSysLab/include/Structures/: CellGrid.hpp  Curve.hpp  NodeGraph.hpp  Octree.hpp  Skeleton.hpp  SkeletonSerializer.hpp  StrandGroup.hpp  StrandGroupSerializer.hpp  StrandModelProfileSerializer.hpp  VoxelGrid.hpp
EvoEngine_Plugins/EcoSysLab/include/TreeDescriptor/: BarkDescriptor.hpp  FlowerDescriptor.hpp  FoliageDescriptor.hpp  FruitDescriptor.hpp  ShootDescriptor.hpp  TreeDescriptor.hpp
EvoEngine_Plugins/EcoSysLab/include/TreeIO/: TreeIO.hpp  TreeIOChains.hpp  TreeIOTree.hpp  TreeIOUtils.hpp  TreeIOVectorT.hpp
EvoEngine_Plugins/EcoSysLab/include/TreeModel/: EnvironmentGrid.hpp  TreeGrowthController.hpp  TreeGrowthData.hpp  TreeModel.hpp  TreeOccupancyGrid.hpp
EvoEngine_Plugins/EcoSysLab/include/Utilities/: Delaunator2D.hpp  LSystemString.hpp  MarchingCubes.hpp  Noises.hpp  ObjectRotator.hpp  ParticlePhysics2DDemo.hpp  Physics2DDemo.hpp  ProceduralNoise.hpp  SorghumCoordinates.hpp  TreeGraph.hpp  TreeVisualizer.hpp
EvoEngine_Plugins/EcoSysLab/include/Volumes/: CubeVolume.hpp  IVolume.hpp  RadialBoundingVolume.hpp
EvoEngine_Plugins/EcoSysLab/python/: PythonBinding.cpp
EvoEngine_Plugins/EcoSysLab/src/: BarkDescriptor.cpp  BillboardCloud.cpp  BillboardCloudBranchMode.cpp  BillboardCloudFlipbookMode.cpp  BillboardCloudFoliageMode.cpp  BillboardCloudOuterShellMode.cpp  BillboardCloudsConverter.cpp  CBTFGroup.cpp  CBTFImporter.cpp  Climate.cpp  ClimateModel.cpp  CubeVolume.cpp  Curve.cpp  DatasetGenerator.cpp  Delaunator2D.cpp  DoubleCBTF.cpp  EcoSysLabLayer.cpp  EnvironmentGrid.cpp  FlowerDescriptor.cpp  FoliageDescriptor.cpp  ForestDescriptor.cpp  FruitDescriptor.cpp  HeightField.cpp  IVolume.cpp  JoeScanScanner.cpp  Json.cpp  LSystemString.cpp  LogGrader.cpp  LogWood.cpp  MarchingCubes.cpp  NodeGraph.cpp  Noises.cpp  ObjectRotator.cpp  PARSensorGroup.cpp  ParticleGrid2D.cpp  ParticlePhysics2DDemo.cpp  Physics2DDemo.cpp  PipeProfile.cpp  ProceduralNoise.cpp  ProfileConstraints.cpp  (+34 more)
EvoEngine_Plugins/Physics/: CMakeLists.txt
EvoEngine_Plugins/Physics/include/: Joint.hpp  Physics_PCH.hpp  RigidBody.hpp
EvoEngine_Plugins/Physics/src/: Collider.cpp  PhysicsLayer.cpp  RigidBody.cpp
EvoEngine_Plugins/RayTracer/: CMakeLists.txt
EvoEngine_Plugins/RayTracer/include/MLVQ/: BTFBase.cuh  BTFMeshRenderer.hpp  CIELab.cuh  CompressedBTF.hpp  IndexAB.cuh  PDF1D.cuh  PDF2D.cuh  PDF3D.cuh  PDF4D.cuh  (+3 more)
EvoEngine_Plugins/RayTracer/src/: BasicPointCloudScanner.cpp  CUDABuffer.cpp  CUDAModule.cpp  LightProbeGroup.cpp  RayTracer.cu  RayTracerCamera.cpp  RayTracerLayer.cpp  TriangleIlluminationEstimator.cpp  VulkanInterlop.cpp
EvoEngine_Plugins/TextureBaking/: CMakeLists.txt
EvoEngine_Plugins/TextureBaking/src/: TextureBaking.cpp
EvoEngine_SDK/: CMakeLists.txt
EvoEngine_SDK/include/: EvoEngine_SDK_PCH.hpp
EvoEngine_SDK/include/Core/: ISingleton.hpp  ProjectManager.hpp  Times.hpp
EvoEngine_SDK/include/Layers/: RenderLayer.hpp  WindowLayer.hpp
EvoEngine_SDK/include/Rendering/: Camera.hpp
EvoEngine_SDK/include/Utilities/: AnimationPlayer.hpp  ImGuiFileDialog.hpp  Tinyply.hpp  Utilities.hpp  WayPoints.hpp
EvoEngine_SDK/python/: PythonBinding.cpp
EvoEngine_SDK/src/: Animation.cpp  Application.cpp  ClassRegistry.cpp  DescriptorLayoutsRegistry.cpp  EntityMetadata.cpp  External.cpp  IHandle.cpp  ILayer.cpp  ISystem.cpp  ImGuiFileDialog.cpp  Jobs.cpp  LightProbe.cpp  LodGroup.cpp  Material.cpp  PlayerController.cpp  PostProcessingStack.cpp  ProjectManager.cpp  Resources.cpp  SkinnedMeshRenderer.cpp  Strands.cpp  Texture2D.cpp  TextureStorage.cpp  TransformGraph.cpp
Plugins/: CMakeLists.txt
Plugins/Physics/: CMakeLists.txt
Plugins/Physics/include/: Collider.hpp  PhysicsLayer.hpp  PhysicsMaterial.hpp
Plugins/Physics/src/: Joint.cpp  PhysicsMaterial.cpp
Plugins/TextureBaking/: CMakeLists.txt
(+690 files in other folders)
