set(EVOENGINE_Plugins "")
set(EVOENGINE_PLUGINS_INCLUDES "")
set(EVOENGINE_PLUGINS_PCH "")

option(EVOENGINE_BUILD_TEXTURE_BAKING_PLUGIN "Build the ray casting texture baking plugin" ON)
if(EVOENGINE_BUILD_TEXTURE_BAKING_PLUGIN)
  add_subdirectory(TextureBaking)
  set(EvoEngine_Plugins ${EvoEngine_Plugins} TextureBakingPlugin)
  set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${TEXTURE_BAKING_INCLUDES})
  set(EVOENGINE_PLUGINS_PCH ${EVOENGINE_PLUGINS_PCH} ${TEXTURE_BAKING_PCH})
endif()

set(EVOENGINE_Plugins ${EVOENGINE_Plugins} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_PCH ${EVOENGINE_PLUGINS_PCH} PARENT_SCOPE)
