
mark_as_advanced(CUDA_SDK_ROOT_DIR)
enable_language(CUDA)


set(RAY_TRACER_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

include(${RAY_TRACER_DIRECTORY}/cmake/configure_optix.cmake)

file(GLOB RAY_TRACER_SOURCES
	${CMAKE_CURRENT_BINARY_DIR}
	${RAY_TRACER_DIRECTORY}/src/*.cpp
	${RAY_TRACER_DIRECTORY}/src/MLVQ/*.cpp
	)

file(GLOB RAY_TRACER_CUDA_SOURCES
	${RAY_TRACER_DIRECTORY}/src/*.cu
	)

set(RAY_TRACER_INCLUDES
	${OptiX_INCLUDE}
	${CUDA_TOOLKIT_ROOT_DIR}/include
	${RAY_TRACER_DIRECTORY}/include
	${RAY_TRACER_DIRECTORY}/include/MLVQ
	${RAY_TRACER_DIRECTORY}/include/RayTracer
	${RAY_TRACER_DIRECTORY}/include/Utilities
	)

include_directories(${EVOENGINE_SDK_INCLUDES})
include_directories(${RAY_TRACER_INCLUDES})

cuda_compile_and_embed(CAMERA_RENDERING_PTX ${RAY_TRACER_DIRECTORY}/src/ptx/CameraRendering.cu)
cuda_compile_and_embed(ILLUMINATION_ESTIMATION_PTX ${RAY_TRACER_DIRECTORY}/src/ptx/IlluminationEstimation.cu)
cuda_compile_and_embed(POINT_CLOUD_SCANNING_PTX ${RAY_TRACER_DIRECTORY}/src/ptx/PointCloudScanning.cu)

add_library(RayTracerPlugin
	STATIC
	#Default
	${CAMERA_RENDERING_PTX}
	${ILLUMINATION_ESTIMATION_PTX}
	${POINT_CLOUD_SCANNING_PTX}

	#C++
	${RAY_TRACER_SOURCES}
	${RAY_TRACER_CUDA_SOURCES}
	#${CMAKE_MODULE_PATH}/configure_optix.cmake
	#${CMAKE_MODULE_PATH}/FindOptiX.cmake
	)

set_property(TARGET RayTracerPlugin PROPERTY CUDA_ARCHITECTURES 61-real 61-virtual)

if (NOT WIN32)
	message(STATUS CUDALIB=${CUDA_TOOLKIT_ROOT_DIR})
	set(CUDA_CUDA_LIBRARY ${CUDA_TOOLKIT_ROOT_DIR}/lib64/stubs)
endif ()
message(STATUS OptiX_INCLUDE:${OptiX_INCLUDE})
message(STATUS CUDA_LIBRARIES:${CUDA_LIBRARIES})
message(STATUS CUDA_CUDA_LIBRARY:${CUDA_CUDA_LIBRARY})
# Linker settings for all platforms
if (NOT WIN32)
	target_link_libraries(RayTracerPlugin
		cuda
	)
else()
	target_link_libraries(RayTracerPlugin
		${CUDA_LIBRARIES}
		${CUDA_CUDA_LIBRARY}
	)
endif ()

target_compile_definitions(RayTracerPlugin
	PRIVATE
	${EVOENGINE_SDK_DEFS}
	${EVOENGINE_PLUGINS_DEFS}
	)	
target_include_directories(RayTracerPlugin
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${EVOENGINE_PLUGINS_INCLUDES}
	${RAY_TRACER_INCLUDES}
	)

if (WIN32)
	set(CUDA_PROPAGATE_HOST_FLAGS ON)
endif ()

set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${RAY_TRACER_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_DEFS ${EVOENGINE_PLUGINS_DEFS} RAY_TRACER_PLUGIN PARENT_SCOPE)

set(EvoEngine_Plugins ${EvoEngine_Plugins} RayTracerPlugin PARENT_SCOPE)