set(TEXTURE_BAKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(TEXTURE_BAKING_INCLUDES
	${TEXTURE_BAKING_DIRECTORY}/include
	)

file(GLOB TEXTURE_BAKING_SOURCES ${TEXTURE_BAKING_DIRECTORY}/src/*.cpp)

add_library(TextureBakingPlugin
	STATIC
	${TEXTURE_BAKING_SOURCES}
	)
target_compile_definitions(TextureBakingPlugin
	PRIVATE
	${EVOENGINE_SDK_DEFS}
	)	
target_include_directories(TextureBakingPlugin
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${TEXTURE_BAKING_INCLUDES}
	)

set(TEXTURE_BAKING_PCH ${TEXTURE_BAKING_DIRECTORY}/include/TextureBaking_PCH.hpp)
set(TEXTURE_BAKING_PCH ${TEXTURE_BAKING_PCH} PARENT_SCOPE)

target_precompile_headers(TextureBakingPlugin
	PRIVATE
	${EVOENGINE_SDK_PCH}
	${TEXTURE_BAKING_PCH}
	)

set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${TEXTURE_BAKING_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_PCHS ${EVOENGINE_PLUGINS_PCHS} ${TEXTURE_BAKING_PCHS} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_DEFS ${EVOENGINE_PLUGINS_DEFS} TEXTURE_BAKING_PLUGIN PARENT_SCOPE)

set(EvoEngine_Plugins ${EvoEngine_Plugins} TextureBakingPlugin PARENT_SCOPE)