option(EVOENGINE_BUILD_RAY_CASTING_TEXTURE_BAKING_PLUGIN "Build the ray casting texture baking plugin" ON)
if(NOT EVOENGINE_BUILD_RAY_CASTING_TEXTURE_BAKING_PLUGIN)
  return()
endif()

set(EVOENGINE_SDK_DIRECTORY ${EVOENGINE_ROOT_DIRECTORY}/EvoEngine_SDK)
set(TEXTURE_BAKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

