set(TEXTURE_BAKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(TEXTURE_BAKING_INCLUDES
	${TEXTURE_BAKING_DIRECTORY}/include
	)
set(TEXTURE_BAKING_INCLUDES ${TEXTURE_BAKING_INCLUDES} PARENT_SCOPE)

file(GLOB TEXTURE_BAKING_SOURCES ${TEXTURE_BAKING_DIRECTORY}/src/*.cpp)

add_library(TextureBaking
	STATIC
	${TEXTURE_BAKING_SOURCES}
	)
		
target_include_directories(TextureBaking
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${TEXTURE_BAKING_INCLUDES}
	)

set(TEXTURE_BAKING_PCH ${TEXTURE_BAKING_DIRECTORY}/include/TextureBaking_SDK_PCH.hpp)
set(TEXTURE_BAKING_PCH ${TEXTURE_BAKING_PCH} PARENT_SCOPE)

target_precompile_headers(TextureBaking
	PRIVATE
	${EVOENGINE_SDK_PCH}
	${TEXTURE_BAKING_PCH}
	)